grilo: Disabling Recent view sorting for now

See https://bugzilla.gnome.org/show_bug.cgi?id=722781